# svtplay-dl-cli-tool

./: .gitignore  README.md  pyproject.toml
svtplay/: _cache.py  _dl_cache.py  _embed.py  _match.py  _svt.py  _tmdb_api.py  backfill.py  diff_state.py  download.py  episodes.py  meta.py  scan.py  search.py  tmdb.py
svtplay/cli/: backfill.py  diff.py  download.py  download_missing.py  episodes.py  meta.py  scan.py  search.py  tmdb.py
